Overflow fix for nav top section

--- a/src/frontend/packages/core/src/features/dashboard/side-nav/side-nav.component.scss
+++ b/src/frontend/packages/core/src/features/dashboard/side-nav/side-nav.component.scss
@@ -10,6 +10,7 @@ $icon-nav-width: 50px;
     display: flex;
     flex-direction: column;
     height: 100%;
+    overflow: hidden;
     width: $nav-width;
   }
   &__top {
